--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -14,12 +14,12 @@
   .row.d-block.d-lg-none.mt-4
     .col-md-12
       - if last_refused_verification.present?
-        .alert.alert-warning.pre-line.px-3.py-0 role='alert'
-          h3.my-3.text-body data-toggle="collapse" data-target="#collapseErrors" aria-expanded="true" aria-controls="collapseErrors"
+        .alert.alert-warning.pre-line.p-0 role='alert'
+          h3.m-0.py-3.px-3.text-body style="border-bottom: 1px solid rgba(102, 77, 3, 0.25);" data-toggle="collapse" data-target="#collapseErrors" aria-expanded="true" aria-controls="collapseErrors"
             =t('.last_refused_title') 
-          div.collapse.show id="collapseErrors"
-            = last_refused_verification.public_comment
-            .mb-3
+          div.px-3.collapse.show id="collapseErrors"
+            .py-3
+              = last_refused_verification.public_comment
 
   h3.mt-3.text-primary.font-weight-bold = t '.personal_data'
   .row.mt-4
@@ -39,12 +39,12 @@
 
     .col-lg-3.d-none.d-lg-block
       - if last_refused_verification.present?
-        .alert.alert-warning.pre-line.px-3.py-0 role='alert'
-          h3.my-3.text-body
+        .alert.alert-warning.pre-line.p-0 role='alert'
+          h3.m-0.py-3.px-3.text-body
             =t('.last_refused_title') 
-          div
-            = last_refused_verification.public_comment
-            .mb-3
+          div.px-3
+            .pb-3
+              = last_refused_verification.public_comment
 
   h3.mt-4.text-primary.font-weight-bold =t '.choose_document_type'
   .row
