--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -11,18 +11,19 @@
     .col-md-12
       div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-  - if last_refused_verification.present?
-    .position-absolute.mt-4 style="top: 0; left: 0; right: 0;"
-      .row
-        .col-md-5
-        .col-md-3
-          / h3 =t('.last_refused_title')
-          .alert.alert-warning.pre-line.px-4.py-3 role='alert'
-            = last_refused_verification.public_comment
+  .row.d-block.d-lg-none.mt-4
+    .col-md-12
+      - if last_refused_verification.present?
+        .alert.alert-warning.pre-line.p-0 role='alert'
+          h3.m-0.py-3.px-3.text-body style="border-bottom: 1px solid rgba(102, 77, 3, 0.25);" data-toggle="collapse" data-target="#collapseErrors" aria-expanded="true" aria-controls="collapseErrors"
+            =t('.last_refused_title') 
+          div.px-3.collapse.show id="collapseErrors"
+            .py-3
+              = last_refused_verification.public_comment
 
   h3.mt-3.text-primary.font-weight-bold = t '.personal_data'
   .row.mt-4
-    .col-md-9
+    .col-md-12.col-lg-9
       .row
         .col-md-6
           = f.input :name
@@ -36,11 +37,18 @@
           = f.input :birth_date, as: :date_picker, icons: :font_awesome
           = f.input :email, as: :email
 
-    .col-md-3
+    .col-lg-3.d-none.d-lg-block
+      - if last_refused_verification.present?
+        .alert.alert-warning.pre-line.p-0 role='alert'
+          h3.m-0.py-3.px-3.text-body
+            =t('.last_refused_title') 
+          div.px-3
+            .pb-3
+              = last_refused_verification.public_comment
 
   h3.mt-4.text-primary.font-weight-bold =t '.choose_document_type'
   .row
-    .col-md-9
+    .col-md-12.col-lg-9
       .row.mt-3
         .col-md-12
           = f.input :document_type,
@@ -53,55 +61,54 @@
               = f.input :document_number
     .col-md-3
 
-    .row.mt-5
-      .col-md-9
-        h3.text-primary.font-weight-bold  =t '.upload_document_photo'
-        .row.mt-3.justify-content-between
-          = f.simple_fields_for :verification_documents do |document|
-            .col-md-5
-              = render 'document_field', document: document
-      .col-md-3
-        .pl-5
-          h3.text-primary.font-weight-bold Инструкция
+    .col-md-12.mt-4.mt-md-5
+      .row
+        .col-lg-12.col-xl-9
+          h3.text-primary.font-weight-bold  =t '.upload_document_photo'
+          .row.mt-xl-3
+            = f.simple_fields_for :verification_documents do |document|
+              .col-md-6.col-xl-5.mt-4.mt-xl-0
+                = render 'document_field', document: document
+        .col-lg-12.col-xl-3
+          h3.text-primary.font-weight-bold.mt-4.mt-xl-0 Инструкция
 
+          .d-flex.align-items-center.mt-3.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-text@2x.png'), width: 13
+            p.small.mb-0
+              | Убедитесь, что Ваше лицо и все детали документов на фото четко видны
 
-        .d-flex.align-items-center.mt-3.mb-2
-          .flex-shrink-0.mr-3.align-self-start
-            = image_tag asset_url('desktop-verification/file-text@2x.png'), width: 13
-          p.small.mb-0
-            | Убедитесь, что Ваше лицо и все детали документов на фото четко видны
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-earmark-check@2x.png'), width: 13
+            p.small.mb-0
+              | Документ на фото размещен полностью, края не обрезаны
 
-        .d-flex.align-items-center.mb-2
-          .flex-shrink-0.mr-3.align-self-start
-            = image_tag asset_url('desktop-verification/file-earmark-check@2x.png'), width: 13
-          p.small.mb-0
-            | Документ на фото размещен полностью, края не обрезаны
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-x@2x.png'), width: 13
+            p.small.mb-0
+              | На фото нет дополнительных объектов
 
-        .d-flex.align-items-center.mb-2
-          .flex-shrink-0.mr-3.align-self-start
-            = image_tag asset_url('desktop-verification/file-x@2x.png'), width: 13
-          p.small.mb-0
-            | На фото нет дополнительных объектов
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
+            p.small.mb-0
+              = "Размер: #{number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
+              br
+              = "Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}"
 
-        .d-flex.align-items-center.mb-2
-          .flex-shrink-0.mr-3.align-self-start
-            = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
-          p.small.mb-0
-            = "Размер: #{number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
-            br
-            = "Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}"
+          .border-top.my-3
 
-        .border-top.my-3
-
-        .d-flex.align-items-center.mb-2
-          .flex-shrink-0.mr-3.align-self-start
-            = image_tag asset_url('desktop-verification/shield-lock@2x.png'), width: 13
-          p.small.mb-0
-            | В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/shield-lock@2x.png'), width: 13
+            p.small.mb-0
+              | В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
 
   .row.my-5
-    .col-8
-    .col-4
+    .col-md-8
+    .col-md-4
       .text-right
         = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-width' => 'Отправляю..' }
 
