--- a/app/views/client/verifications/new.html+mobile.slim
+++ b/app/views/client/verifications/new.html+mobile.slim
@@ -2,6 +2,8 @@
   h1.h4.font-weight-bold Верификация аккаунта
   h4.h6.font-weight-normal = verification.applicant.external_id
 
+  = render 'mobile_alert_error', last_refused_verification: last_refused_verification
+
   p.mt-4.small.font-weight-medium Верификация аккаунта дает множество преимуществ. Вы сможете подать заявку на верификацию за 4 шага: 
 
   .bg-info.px-2.py-3.rounded
