--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -152,3 +152,10 @@ $success-base64: "data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' w
   line-height: 14px;
 }
 
+[data-toggle="collapse"] .fa.fa-chevron-down {
+  transition: transform 0.3s ease-in-out;
+}
+
+.collapsed[data-toggle="collapse"] .fa.fa-chevron-down {
+  transform: rotate(180deg);
+}
