--- a/app/views/client/verifications/step2.html+mobile.slim
+++ b/app/views/client/verifications/step2.html+mobile.slim
@@ -5,6 +5,8 @@
     .progress.w-100 style="height: 4px"
       .progress-bar role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
 
+= render 'mobile_alert_error', last_refused_verification: last_refused_verification
+
 = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
   h3.h4.mt-4.mb-3.font-weight-bold.text-primary Выберите тип документа
 
