--- a/app/views/client/verifications/new.html+mobile.slim
+++ b/app/views/client/verifications/new.html+mobile.slim
@@ -32,4 +32,4 @@
   .mb-5.pb-5
 
 .container.fixed-bottom.pb-4.d-flex.justify-content-center
-  = link_to 'Пройти верификацию', step1_client_verifications_path, class: 'btn btn-primary flex-grow-1' 
+  = button_to 'Пройти верификацию', client_verifications_path(verification: { next_step: 1 }), class: 'btn btn-primary flex-grow-1', method: :post, remote: true
