--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -8,6 +8,7 @@
 = render 'mobile_alert_error', last_refused_verification: last_refused_verification
 
 = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
+  =render 'hidden_fields', f: f
   p.mt-3.small.font-weight-semibold
     = 'Загрузите селфи с документом и листком бумаги, с текущей датой и фразой «для криптобанка Bitzlato»'
 
@@ -44,7 +45,7 @@
   = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
 
   .container.fixed-bottom.pb-4.d-flex
-    = f.input :next_step, as: :hidden, input_html: { value: 0 }
+    = f.input :next_step, as: :hidden, input_html: { value: 5 }
     = f.submit 'Продолжить', class: 'btn btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
     / = link_to 'Назад', step3_client_verifications_path, class: 'btn btn-outline-primary font-weight-semibold w-100 mr-4', style: 'max-width: 130px'
     / = link_to 'Продолжить', step4_client_verifications_path, class: 'btn btn-primary font-weight-semibold w-100'
