--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -49,9 +49,8 @@
 
   .container.fixed-bottom.pb-4.d-flex
     = f.input :next_step, as: :hidden, input_html: { value: 5 }
+    = link_to 'Назад', client_verifications_path(verification: { next_step: 3 }), class: 'btn btn-outline-primary font-weight-semibold w-100 mr-4', style: 'max-width: 130px', method: :post
     = f.submit 'Продолжить', class: 'btn btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
-    / = link_to 'Назад', step3_client_verifications_path, class: 'btn btn-outline-primary font-weight-semibold w-100 mr-4', style: 'max-width: 130px'
-    / = link_to 'Продолжить', step4_client_verifications_path, class: 'btn btn-primary font-weight-semibold w-100'
 
 .mb-5.pb-5
 
