--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -28,7 +28,7 @@
           = 'Открыть камеру'
 
     div style="display: none" data-filename-container=""
-      div.position-relative.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" 
+      div.position-relative.border.border-secondary.px-3.py-2.rounded.d-flex.justify-content-between.w-100 type="button" 
         span.text-truncate.w-100.pr-4 data-filename=""
         span.position-absolute.px-3 style="right: 0" data-clear-button=""
           | &times;
