from https://github.com/bitzlato/agnessa/pull/177

--- a/app/views/client/verifications/_document_field_mobile.slim
+++ b/app/views/client/verifications/_document_field_mobile.slim
@@ -19,7 +19,7 @@ div id="#{element_id}" data-file-input=""
         = 'Открыть камеру'
 
   div style="display: none" data-filename-container=""
-    div.position-relative.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button"  class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
+    div.position-relative.border.border-secondary.px-3.py-2.rounded.d-flex.justify-content-between.w-100 type="button"  class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
       span.text-truncate.w-100.pr-4 data-filename=""
       span.position-absolute.px-3 style="right: 0" data-clear-button=""
         | &times;
