--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -1,5 +1,5 @@
 .d-flex.mt-4
-  h1.h4.w-25.m-0.font-weight-bold.small.text-primary.text-uppercase Шаг 4 из 4
+  h1.h4.w-25.m-0.font-weight-bold.small.text-primary Шаг 4 из 4
 
   .d-flex.align-items-center.w-75
     .progress.w-100 style="height: 4px"
