--- a/app/views/client/verifications/step1.html+mobile.slim
+++ b/app/views/client/verifications/step1.html+mobile.slim
@@ -14,7 +14,8 @@
   = f.input :patronymic
   = f.input :citizenship_country_iso_code,
           as: :select,
-          collection: country_options_for_select
+          collection: country_options_for_select,
+          input_html: { class: 'custom-select' }
   .position-relative
     = f.input :birth_date, as: :date_picker, icons: :font_awesome
   = f.input :email, as: :email
