Fix syntax error

--- a/app/views/admin/verifications/_notify.slim
+++ b/app/views/admin/verifications/_notify.slim
@@ -4,7 +4,7 @@
       notify_admin_verification_path(verification), 
       method: :post, 
       class: 'btn btn-secondary btn-sm', 
-      data: { 'disable-width' => 'Отправляю..' },
+      data: { 'disable-with' => 'Отправляю..' },
       remote: true, 
       id: :verification_callback_form
 
