--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -104,6 +104,6 @@
     .col-md-8
     .col-md-4
       .text-right
-        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-width' => 'Отправляю..' }
+        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
 
 = render 'photo_upload_script'
