--- a/app/views/client/verifications/_document_type_mobile_radio.slim
+++ b/app/views/client/verifications/_document_type_mobile_radio.slim
@@ -1,6 +1,6 @@
 -document_type_collection_for_radio_buttons.each do |doc_type|
   .custom-control.custom-radio.my-4
-    input.custom-control-input type="radio" id="radio-#{doc_type[1]}" name="#{f.object_name}[document_type]" value=doc_type[1]
+    input.custom-control-input type="radio" id="radio-#{doc_type[1]}" name="#{f.object_name}[document_type]" value=doc_type[1] checked=(f.object.document_type == doc_type[1])
     label class="custom-control-label" for="radio-#{doc_type[1]}"
       - image = doc_type[2][:image]
       = image_tag asset_url(image), width: 24, class: 'mr-2'
