--- a/app/views/client/verifications/step2.html+mobile.slim
+++ b/app/views/client/verifications/step2.html+mobile.slim
@@ -6,7 +6,17 @@
       .progress-bar role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
 
 = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
-  =render 'hidden_fields', f: f
+  = f.input :name, as: :hidden
+  = f.input :last_name, as: :hidden
+  = f.input :patronymic, as: :hidden
+  = f.input :citizenship_country_iso_code, as: :hidden
+  = f.input :birth_date, as: :hidden
+  = f.input :email, as: :hidden
+  = f.simple_fields_for :verification_documents do |document|
+    = document.input :file, as: :hidden
+    = document.input :file_cache, as: :hidden
+    = document.input :document_type_id, as: :hidden
+
   h3.h4.mt-4.mb-3.font-weight-bold.text-primary Выберите тип документа
 
   =render 'document_type_mobile_radio', f: f
