--- a/app/views/client/verifications/_document_type_mobile_radio.slim
+++ b/app/views/client/verifications/_document_type_mobile_radio.slim
@@ -6,4 +6,6 @@
       = image_tag asset_url(image), width: 24, class: 'mr-2'
       = doc_type[0]
 
-div.invalid-feedback.d-block Тип документа не может быть пустым
+-unless f.object.errors[:document_type].blank?
+  div.invalid-feedback.d-block
+    = f.object.errors[:document_type].to_sentence
