--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -14,15 +14,12 @@
   = f.input :email, as: :hidden
   = f.input :document_type, as: :hidden
   = f.input :document_number, as: :hidden
-  //TODO:
   = f.simple_fields_for :verification_documents do |document|
-    = document.input :file_cache, as: :hidden
-    = document.input :document_type_id, as: :hidden
-
-  = f.simple_fields_for :verification_documents do |document|
-      / TODO: нужно придумать хороший надежный способ, как опредлеить какой именно тип документа нужен на конкретном шаге
-      = render 'document_field_mobile', document: document if document.object.document_type.position == 1
-
+   -if document.object.document_type.position == 1
+      = render 'document_field_mobile', document: document
+   -else
+     = document.input :file_cache, as: :hidden
+     = document.input :document_type_id, as: :hidden
   = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
 
   .container.fixed-bottom.pb-4.d-flex
