Feature/182475611 mobile form example (#173)

--- a/app/views/client/verifications/new.html+mobile.slim
+++ b/app/views/client/verifications/new.html+mobile.slim
@@ -34,4 +34,6 @@
   .mb-5.pb-5
 
 .container.fixed-bottom.pb-4.d-flex.justify-content-center
-  = link_to 'Пройти верификацию', step1_client_verifications_path, class: 'btn btn-primary flex-grow-1' 
+  = simple_form_for verification, url: form_path, html: { multipart: true,  class: 'w-100', novalidate: false } do |f|
+    = render 'hidden_fields', f: f
+    = f.submit 'Пройти верификацию', class: 'btn btn-primary flex-grow-1 w-100', data: { 'disable-with' => 'Отправляю..' }
